Communication front-end with back-end done

--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DressMeApp</string>
     <string name="title_activity_camara">CamaraActivity</string>
     <string name="title_activity_clothe">ClotheActivity</string>
+    <string name="title_activity_load">LoadActivity</string>
 </resources>
